app/components/styles.module.css
/* ... */
.profileContents {
  position: absolute;
  pointer-events: none;
  opacity: 0;
  display: none;
  top: 45px;
  right: 0;
  height: 200px;
  width: 150px;
  background: var(--gray-green);
}

.signOut {
  width: 80px;
  height: 30px;
  border-radius: 5px;
}

.signOut:hover {
  background: var(--green);
}

.showElement {
  display: block;
  opacity: 1;
  pointer-events: all;
}

/*  Player styles */

.playerControls {
  position: fixed;
  display: flex;
  height: 125px;
  width: 100%;
  padding: 1rem;
  bottom: 0;
  background-color: #111;
  border-top: 1px solid #454545;
  z-index: 999;
  gap: 1rem;
  justify-content: center;
}

.playerWrap {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  max-width: var(--max-page-width);
  width: 100%;
}

/*-----Timeline styles-----*/

.timelineSeek {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  grid-row: 2;
  grid-column: 2;
}

.timelineSeek input {
  width: 100%;
}

.timeline {
  --progress: -100%;
  position: relative;
  height: 6px;
  width: 100%;
  background-color: #888;
  overflow: hidden;
  cursor: pointer;
}

.timelineThumb {
  pointer-events: none; /* prevent onclick registering thumb as target instead of timeline */
  position: absolute;
  left: var(--progress);
  height: 6px;
  width: 100%;
  background-color: #fff;
}

.timelineSeek:hover .timelineThumb,
.volumeControl:hover .timelineThumb {
  background-color: var(--green);
}


/*-----Controls-----*/

.currentInfo {
  display: flex;
  justify-self: flex-start;
  gap: 1rem;
  grid-row: span 2;
  grid-column: 1;
}

.currentTrack {
  font-weight: bold;
  align-self: flex-end;
}

.currentArtist {
  font-size: .8rem;
  align-self: flex-start;
}

.playerBtns {
  display: flex;
  gap: 1rem;
  justify-self: center;
  grid-column: 2;
}

.shuffleBtn, .repeatBtn, 
.nextBtn, .prevBtn,
.playBtn, .volumeBtn,
.showHidePlaylistBtn,
.devicesBtn {
  position: relative;
  background-color: #111;
  color: #eee;
}

.shuffleBtn:hover, .repeatBtn:hover, 
.nextBtn:hover, .prevBtn:hover,
.playBtn:hover, .volumeBtn:hover,
.showHidePlaylistBtn:hover, .devicesBtn svg:hover {
  color:var(--green);
}

.volumeControl {
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-self: end;
}

.volumeControl .timeline {
  width: 100px;
}

.showHidePlaylistBtn {
  position: absolute;
  right: 15px;
  bottom: 124px;
  padding: .3rem .5rem 0;
  border-radius: 10px 10px 0 0;
  border-left: 1px solid #454545;
  border-top: 1px solid #454545;
  border-right: 1px solid #454545;
}

.showHidePlaylistBtn svg {
  transition: transform 300ms ease-in-out;
}

.rotateBtn {
  transform: rotate(180deg);
}

.currentSong {
  position: absolute;
  left: 20px;
  display: flex;
  gap: 1rem;
}

.devicesWrap {
  position: relative;
  display: flex;
  justify-self: flex-end;
  margin-right: 115px;
}

.deviceList {
  display: none;
  justify-content: center;
  text-align: center;
  background-color: var(--gray-green);
  padding: 1rem 1rem 2rem 1rem;
  gap: 1rem;
  position: absolute;
  bottom: 55px;
  right: 50%;
  transform: translateX(50%);
  list-style: none;
  z-index: 99;
  width: 250px;
  border-radius: 10px;
  box-shadow: 4px 4px 10px black;
}

.device-list .triangle {
  border-top: 8px solid var(--gray-green);
}

.device-list li {
  cursor: pointer;
  padding: 1rem;
  background: var(--gray-green);
  border-radius: 5px;
}

.device-list li:hover {
  color: var(--green);
  background: black;
}

/*--------Playlist Message---------*/

.playlist-update-message {
  font-size: .8rem;
  text-align: center;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  background-color: var(--bg-blue);
  color: white;
  padding: 1rem;
  border: 1px solid var(--green);
  border-radius: 5px;
  bottom: 120px;
  left: 50%;
  transform: translateX(-50%);
  transition: opacity 200ms ease-in-out;
}

.triangle {
  width: 0; 
  height: 0; 
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid var(--green);
  position: absolute;
  bottom:-8px;
  left: 50%;
  transform: translateX(-50%);
}

.show {
  opacity: 1;
}

.tooltip {
  opacity: 0;
  z-index: 9999;
  pointer-events: none;
  display: flex;
  position: absolute;
  justify-content: center;
  align-items: center;
  background-color: var(--gray-green);
  color: white;
  border-radius: 5px;
  top: -35px;
  left: 50%;
  transform: translateX(-50%);
  height: 40px;
  width: max-content;
  padding: 0 20px;
  box-shadow: 0 5px 10px #111;
  transition: all 200ms ease-in-out;
}

.playerWrap * button:hover .tooltip,
.edit-songlist * button:hover .tooltip {
  opacity: 1;
  top: -50px;
}

/*  Loading spinner  */
.loading {
  display: grid;
  place-items: center;
}

.reactLogo {
  animation: rotate 6s linear infinite;
}

@keyframes rotate {
  from {transform: rotate(0deg);}
  to {transform: rotate(360deg);}
}

@keyframes loading {
  0% {opacity: .3;}
  50% {opacity: .9;}
  100% {opacity: .3;}
}

/* Edit playlist section */

.playlistWrap {
  position: fixed;
  top: 96px;
  display: grid;
  grid-template-columns: 47% 53%;
  height: 100vh;
  width: 100%;
  transition: transform 400ms ease-in-out;
  background-color: var(--gray-green);
}

.hidden {
  display: none;
}

.hide {
  transform: translateY(100vh);
}

.songCategory {
  display: grid;
  grid-template-columns: 40px 80px auto 60px;
  justify-self: center;
  width: 100%;
  max-width: 1000px;
  height: 50px;
  text-transform: uppercase;
  border-bottom: 1px solid var(--gray-green);
  background: linear-gradient(180deg, var(--gray-green), var(--bg-blue));
  padding: 1.2rem .7rem;
  margin-bottom: 1rem;
  font-size: .6rem;
}

.playlist {
  background-color: var(--gray-green);
  overflow-y: auto;
  border-top: 3px solid var(--gray-green);
  padding: 2rem;
  height: calc(100vh - 215px);
  display: grid;
}
/* ... */

